// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gcs – nodes next create 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "content-length": "73",
    "content-type": "application/json",
    "host": "fa5e.bd7c.data.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "json": {
    "DATA_TYPE": "node#1.2.0",
    "ip_addresses": [
      "1.1.1.1",
    ],
    "status": "inactive",
  },
  "method": "POST",
  "url": "https://fa5e.bd7c.data.globus.org/api/nodes",
}
`;

exports[`gcs – nodes next get 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "host": "fa5e.bd7c.data.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "method": "GET",
  "url": "https://fa5e.bd7c.data.globus.org/api/nodes/some-uuid",
}
`;

exports[`gcs – nodes next getAll 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "host": "fa5e.bd7c.data.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "method": "GET",
  "url": "https://fa5e.bd7c.data.globus.org/api/nodes",
}
`;

exports[`gcs – nodes next patch 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "content-length": "21",
    "content-type": "application/json",
    "host": "fa5e.bd7c.data.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "json": {
    "status": "inactive",
  },
  "method": "PATCH",
  "url": "https://fa5e.bd7c.data.globus.org/api/nodes/some-uuid",
}
`;

exports[`gcs – nodes next remove 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "host": "fa5e.bd7c.data.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "method": "DELETE",
  "url": "https://fa5e.bd7c.data.globus.org/api/nodes/some-uuid",
}
`;

exports[`gcs – nodes next update 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "content-length": "71",
    "content-type": "application/json",
    "host": "fa5e.bd7c.data.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "json": {
    "DATA_TYPE": "node#1.2.0",
    "ip_addresses": [
      "1.1.1.1",
    ],
    "status": "active",
  },
  "method": "PUT",
  "url": "https://fa5e.bd7c.data.globus.org/api/nodes/some-uuid",
}
`;
